Thu Jun 16 18:54:01 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_codegen.cpp:
        
          Added conditional (for HPUX compiler only) code generation of
          include of ace/SString.h in the stub source file, apparently
          necessary when the HP compiler has optimize=1. Thanks to
          Kris Dekeyser <Kris.Dekeyser@lms.be> for reporting the problem.

Thu Jun 16 17:37:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TAO_Internal.cpp:
          Do the initialisation of the messaging loader earlier

Thu Jun 16 16:47:42 2005  Simon McQueen  <sm@prismtech.com>

        * orbsvcs/IFR_Service/be_produce.cpp:

          Check repository ptr is not null before use in BE_cleanup.
          This fixes bug #2154.

Thu Jun 16 07:45:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PI/ORBInitializer_Registry_Impl.{h,cpp}:
          Implemented fini call, at the moment the ORBInitializer Registry
          is removed by service config we release all registered
          ORBInitializers

        * tests/Nested_Upcall_Crash/Nested_Upcall_Crash.mpc:
          Simplified this MPC file

Thu Jun 16 06:06:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Param_Test/Param_Test.mpc:
          Set exename for anyop

Wed Jun 15 13:46:48 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * TAO_IDL/be/be_visitor_array/serializer_op_ch.cpp:
        * TAO_IDL/be/be_visitor_array/serializer_op_cs.cpp:
        * TAO_IDL/be/be_visitor_enum/serializer_op_ch.cpp:
        * TAO_IDL/be/be_visitor_enum/serializer_op_cs.cpp:
        * TAO_IDL/be/be_visitor_field/serializer_op_ch.cpp:
        * TAO_IDL/be/be_visitor_field/serializer_op_cs.cpp:
        * TAO_IDL/be/be_visitor_module/serializer_op.cpp:
        * TAO_IDL/be/be_visitor_root/serializer_op.cpp:
        * TAO_IDL/be/be_visitor_sequence/serializer_op_ch.cpp:
        * TAO_IDL/be/be_visitor_sequence/serializer_op_cs.cpp: